# CVC4

src/mcsat/: Makefile.am  solver.cpp
src/mcsat/cnf/: tseitin_cnf_stream.cpp
src/mcsat/fm/: bounds_model.h
src/mcsat/lra/: Makefile  Makefile.am  linear_constraint.cpp  linear_constraint.h  lra_plugin.cpp  lra_plugin.h
src/mcsat/rules/: Makefile.am  fm_rule_copy.cpp  fm_rule_copy.h
src/mcsat/util/: ite_removal.cpp  ite_removal.h
src/smt/: smt_engine.cpp
